--- a/src/web/employee.less
+++ b/src/web/employee.less
@@ -1,3 +1,11 @@
+.employee-add-layer{
+  float:right;
+  margin-right:0px;
+}
+.employee-add-btn{
+  float:right;
+}
+
 .margin-top-10,.filter-content-layer{
     margin-top: 10px;
 }
