Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/src/web/employee.less
+++ b/src/web/employee.less
@@ -29,6 +29,16 @@
   border-radius: 6px;
 }
 
+//设置 inline表单上下的间距
+.ant-form-inline .ant-form-item{
+  margin-bottom: 14px;
+}
+//把表单脚部的位置校准 （可能不同浏览器会有问题）
+.FormItem-modal-footer{
+  width:100%+6px;
+  margin-left: -16px;
+}
+
 
 
 
