Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/src/web/device.less
+++ b/src/web/device.less
@@ -2,3 +2,13 @@
 .status-word{
   margin-left:10px;
 }
+
+.server-right{
+  min-height:300px;
+}
+
+.server-left{
+  border-right: 1px solid #d9d9d9;
+  min-height:300px;
+  float:left;
+}
