--- a/src/entry/index.less
+++ b/src/entry/index.less
@@ -1,3 +1,69 @@
+//新增、添加的button
+.table-add-layer{
+  float:right;
+  margin-right:0px;
+}
+.table-add-btn{
+  float:right;
+}
+
+//设置 inline表单上下的间距
+.ant-form-inline .ant-form-item{
+  margin-bottom: 14px;
+}
+//把表单脚部的位置校准 （可能不同浏览器会有问题）
+//要改
+.FormItem-modal-footer{
+  width:100%+6px;
+  margin-left: -16px;
+}
+
+
+//弹出的高级搜索层
+.margin-top-10,.filter-content-layer{
+    margin-top: 10px;
+}
+
+//错误提示长度
+.ant-form-explain{
+  width: 500px;
+}
+
+
+.advanced-search-o{
+  width: 100%;
+ position:absolute;
+ background-color: white;
+ z-index:1000;
+}
+.advanced-search-form {
+  padding: 16px 8px;
+  background: #f8f8f8;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+}
+
+
+
+/* 由于输入标签长度不确定，所以需要微调使之看上去居中 */
+.advanced-search-form > .row {
+  margin-left: -10px;
+}
+
+.advanced-search-form > .row > .col-8 {
+  padding: 0 8px;
+}
+
+.advanced-search-form .ant-form-item {
+  margin-bottom: 16px;
+}
+
+.advanced-search-form .ant-btn + .ant-btn {
+  margin-left: 8px;
+}
+
+
+
 .el-display-none{
   display: none;
 }
