Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/src/component/mainbody.less
+++ b/src/component/mainbody.less
@@ -37,7 +37,23 @@
 }
 
 
-/*暂时把新增标签页按钮隐藏了，以后再组件代码上改*/
-.ant-tabs-extra-content{
-  display:none;
+.loginUser-item{
+  color: hsla(0,0%,100%,.8);
+  font-size:14px;
+  margin-top:15px;
+  margin-right:20px;
+  float:right;
 }
+
+.loginUser-item:hover{
+  color:#fff;
+}
+
+.loginUser-dialog-item:hover{
+  color:#cccccc;
+}
+/*暂时把新增标签页按钮隐藏了，以后再组件代码上改*/
+//已经改了
+// .ant-tabs-extra-content{
+//   display:none;
+// }
