Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/src/component/mainbody.less
+++ b/src/component/mainbody.less
@@ -43,12 +43,16 @@
   margin-top:15px;
   margin-right:20px;
   float:right;
+  cursor: pointer;
 }
 
 .loginUser-item:hover{
   color:#fff;
 }
-
+.loginUser-dialog-item{
+  text-align:center;
+  cursor: pointer;
+}
 .loginUser-dialog-item:hover{
   color:#cccccc;
 }
