--- a/src/component/mainbody.less
+++ b/src/component/mainbody.less
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   z-index: 3;
-  background-color: #38bbe1;
+  background-color: #09C;
   padding: 0 20px;
 }
 #sidebar-wrapper {
@@ -14,14 +14,14 @@
   left: 0;
   width: 240px;
   bottom: 0;
-  background: #f2f2f2;
+  background: #404040;
   padding: 0;
   z-index: 2;
   transition: all cubic-bezier(.645,.045,.355,1) 0.4s;
 }
 #content-wrapper {
   min-height: 100%;
-  padding: 60px 20px 0 230px;
+  padding: 60px 10px 0 235px;
   transition: padding-left cubic-bezier(.645,.045,.355,1) 0.4s;
   position: relative;
   z-index: 1;
