--- a/src/entry/index.less
+++ b/src/entry/index.less
@@ -11,6 +11,10 @@
 .ant-form-inline .ant-form-item{
   margin-bottom: 14px;
 }
+
+.ant-form-item .ant-transfer-list-body{
+  margin-top: 14px
+}
 //把表单脚部的位置校准 （可能不同浏览器会有问题）
 //要改
 .FormItem-modal-footer{
@@ -27,6 +31,7 @@
 //错误提示长度
 .ant-form-explain{
   width: 500px;
+  z-index: 999999;
 }
 
 
@@ -63,10 +68,40 @@
 }
 
 
+.tip-button{
+  background: #f7f7f7;
+  padding: 1px 6px;
+  border-radius: 3px;
+  color: #888;
+  font-size: .8rem;
+  border: 1px solid #e9e9e9;
+  cursor: pointer;
+}
+
+.icon-toinstlist{
+  width: 12px;
+  height: 12px;
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: middle;
+  zoom: 1;
+  background: url(//static.yyimg.com/ant-design/image/toinstlist.png) center 1px no-repeat;
+}
+
+.peizhicanshu-title,.peizhimokuai-title{
+  border-left: 2px solid #88B7E0;
+  font-size: 16px;
+  padding-left: 5px;
+}
 
 .el-display-none{
   display: none;
 }
 .el-display-block{
   display: block;
+}
+
+//textarea 大小暂时设为不可伸缩
+.ant-input-lg{
+  resize:none;
 }
