--- a/src/entry/index.less
+++ b/src/entry/index.less
@@ -3,7 +3,7 @@
   float:right;
   margin-right:0px;
 }
-.table-add-btn{
+.table-add-btn,.table-return-btn{
   float:right;
 }
 
@@ -14,6 +14,11 @@
 
 .ant-form-item .ant-transfer-list-body{
   margin-top: 14px
+}
+
+
+.ant-form-item .ant-transfer-list-body ul{
+  height:100%-5px;
 }
 //把表单脚部的位置校准 （可能不同浏览器会有问题）
 //要改
@@ -32,6 +37,42 @@
 .ant-form-explain{
   width: 500px;
   z-index: 999999;
+}
+
+//超链接
+.Alink{
+  color:#2db7f5;
+  cursor:pointer;
+}
+.Alink:hover{
+  color:#ff5f3e;
+}
+
+//hr分割线
+.hr{
+  height: 1px;
+  border: 0;
+  background: #e9e9e9;
+  margin: 16px 0;
+  clear: both;
+}
+
+//中文和字母 不断开分行
+.word-break{
+  word-break:break-all;
+}
+
+
+.div-inline{
+  display: inline-block;
+}
+
+.line-height-small{
+  line-height:20px !important;
+}
+//高亮字符
+.item-highlight{
+  //color:rgb(46, 143, 220);//#2db7f5;
 }
 
 
