--- a/src/web/device.less
+++ b/src/web/device.less
@@ -12,3 +12,19 @@
   min-height:300px;
   float:left;
 }
+
+
+
+.server-left .ant-menu-submenu-vertical{
+  z-index: 99999999999 !important;
+
+}
+
+.server-header{
+  margin:10px 0 20px 120px;
+}
+
+
+.server-body{
+  margin:10px 0 20px 120px;
+}
