--- a/src/entry/index.less
+++ b/src/entry/index.less
@@ -126,7 +126,7 @@
   display: inline-block;
   vertical-align: middle;
   zoom: 1;
-  background: url(//static.yyimg.com/ant-design/image/toinstlist.png) center 1px no-repeat;
+  background: url(/static/2.0.0/image/toinstlist.png) center 1px no-repeat;
 }
 
 .peizhicanshu-title,.peizhimokuai-title{
